📢 近期系统优化与更新同步 1. 交互优化：筛选框全面外置 原先隐藏在折叠面板内的高级筛选条件现已全面外置，直接平铺在数据列表顶部；并取消了下拉即加载的设定，改为更稳妥的“手动点击搜索”模式，提升页面查询体验。
2. 数据护城河：全方位数据校验功能上线 系统不仅支持基础日期、数字格式的校验，现已全面集成“约束引擎”：

支持文本长度约束、数字大小范围拦截（Max/Min）。
开放了高级的“正则表达式”自定义校验（如手机号、特定编码等），支持配置对用户友好的中文报错提示。
3. 填报指引：新增文本说明框（注释展示） 新增独立表单填报说明（Description）配置。现在所有的填报链接进入后，顶部都会有一片专属区域用于呈现该表单的业务填报细则、要求或注释，降低沟通成本。

4. 机制保障：兼容用户模板列位置乱序 系统底层读取 Excel 已实现彻底的“寻表头映射”而非“寻物理位置映射”。无论用户下载模板后如何挪动、乱序业务列的位置，只要原本的表头名称不篡改，系统均可精准识别、正确落库，对系统稳定性“零影响”。

5. 模板纯净化：彻底剥离底层无关字段 系统已完全遵从纯配置驱动逻辑：所有底层追踪字段（如 backup1~8、导入时间等系统审计保留字）只要不在初始设定的参考表行中定义，用户点击“下载模板”时，导出的空表将 100% 仅呈现干干净净的“业务填报表头”。

6. 底层规划：转向 delete_flag 软删除模式 （规划确认项）业务表级数据的物理拦截逻辑，后续支持平滑切换至以 Bool 类型的 delete_flag 为标识位的软删除标记模式，以提升企业数据的留存追溯与容错能力。

7. 定时与催办：精确至“分钟/小数”的任务倒计时基建 后台引擎现已打破传统的“按天/按夜里零点”计时限制。

配置端支持带有小数天数的配置（如 3.5 天）及极为具体的发件时刻（如早上 08:30）。
后台及邮件下发会自动算出精确到分钟的截止期（如计算出“次日 20:30”），邮件中呈现的“截止时间”也将完全向此等细粒度对齐。